--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="../easylasagna.html">Easy Lasagna</a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1>Odin Recipes</h1>
+            <ul>
+                <li>
+                    <a href="./recipes/easylasagna.html">Easy Lasagna</a>
+                </li>
+                <li>
+                    <a href="./recipes/thai-fried-rice-with-pineapple-and-chicken.html">Thai Fried Rice with Pineapple and Chicken</a>
+                </li>
+                <li>
+                    <a href="./recipes/easymochi.html">Easy Mochi</a>
+                </li>
+            </ul>
+    </body>
 </html>
